--- a/styles/pokemon.css
+++ b/styles/pokemon.css
@@ -2,30 +2,82 @@
 
 main {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
     grid-gap: 2rem;
     width: 100%;
     max-width: 1280;
     margin: 0 auto;
     margin-bottom: 6rem;
+    
+}
+
+h3{
+    text-align: center;
 }
 
 img{
     width: 120px;
-    justify-content: center;
+    border-width: 30px;
+    border-color: black;
 }
 
 div{
+    border-color: black;
+    border-width: 20px;
     border-radius: 10px;
-    border: black 4px;
     justify-content: center;
     font-family: 'Gill Sans';
-    display: flex;
-    flex-direction: column;
+
+ 
+    background-color: rgb(73, 134, 190);
 }
 
 button{
     width: 150px;
     height: 80px;
+    color: yellow;
     background-color: rgb(36, 87, 134);
 }
+
+.scene {
+    width: 200px;
+    height: 260px;
+    border: 1px solid #CCC;
+    margin: 40px 0;
+    perspective: 600px;
+  }
+  
+  .card {
+    width: 100%;
+    height: 100%;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    cursor: pointer;
+    position: relative;
+  }
+  
+  .card.is-flipped {
+    transform: rotateY(180deg);
+  }
+  
+  .card__face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    line-height: 260px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    font-size: 40px;
+    backface-visibility: hidden;
+  }
+  
+  .card__face--front {
+    background: red;
+  }
+  
+  .card__face--back {
+    background: blue;
+    transform: rotateY(180deg);
+  }
+  
