--- a/styles/pokemon.css
+++ b/styles/pokemon.css
@@ -2,13 +2,23 @@
 
 main {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 2rem;
     width: 100%;
     max-width: 1280;
     margin: 0 auto;
     margin-bottom: 6rem;
     
+}
+
+.picDivs{
+  width: 100%;
+}
+
+.charDivs{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h3{
@@ -19,6 +29,10 @@ img{
     width: 120px;
     border-width: 30px;
     border-color: black;
+}
+
+p{
+  color: black;
 }
 
 div{
@@ -73,11 +87,11 @@ button{
   }
   
   .card__face--front {
-    background: red;
+    background: rgb(203, 211, 97);
   }
   
   .card__face--back {
-    background: blue;
+    background: rgb(57, 57, 211);
     transform: rotateY(180deg);
   }
   
