--- a/styles/pokemon.css
+++ b/styles/pokemon.css
@@ -8,7 +8,7 @@ main {
     max-width: 1280;
     margin: 0 auto;
     margin-bottom: 6rem;
-    background-color: aquamarine;
+    background-color: rgb(34, 107, 150);
 }
 
 .picDivs{
@@ -51,7 +51,7 @@ button{
 .scene {
     width: 200px;
     height: 260px;
-    border: 1px solid #CCC;
+    
     perspective: 600px;
   }
   
@@ -66,10 +66,6 @@ button{
   
   .card.is-flipped {
     transform: rotateY(180deg);
-    background-color: rgb(68, 68, 219);
-    border-style: solid;
-    border-color: yellow;
-    border-width: 10px;
   }
   
   .card__face {
@@ -77,24 +73,42 @@ button{
     width: 100%;
     height: 100%;
     line-height: 260px;
-    color: white;
     text-align: center;
     font-weight: bold;
     font-size: 40px;
     backface-visibility: hidden;
+    background: rgb(203, 211, 97);
+    width: 180px;
     border-style: solid;
     border-color: yellow;
     border-width: 10px;
     border-radius: 8px;
+    transform: rotateY(180deg);
+
+    
   }
   
   .card__face--front {
-    background: rgb(203, 211, 97);
+    /* background: rgb(203, 211, 97);
     width: 180px;
+    border-style: solid;
+    border-color: yellow;
+    border-width: 10px;
+    border-radius: 8px; */
+    /* transform: rotateY(180deg); */
+    backface-visibility: hidden;
   }
   
   .card__face--back {
-    background: rgb(25, 75, 214);
+    /* background-color: rgb(25, 75, 214); */
     transform: rotateY(180deg);
+    /* border-style: solid;
+    border-color: yellow;
+    border-width: 10px;
+    border-radius: 8px; */
+    /* height: 100%;
+    width: 100%; */
+    backface-visibility: hidden;
+
   }
   
