--- a/styles/starwars-style.css
+++ b/styles/starwars-style.css
@@ -49,7 +49,8 @@ main {
 
 div{
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     margin-top:10px;
@@ -59,5 +60,10 @@ div{
 
 img{
      width: 200px
+}
+
+.personDiv{
+    display: flex;
+    flex-direction: column;
 }
 
