--- a/styles/starwars-style.css
+++ b/styles/starwars-style.css
@@ -10,6 +10,20 @@ header{
     
 }
 
+h1{
+    font-family: marsek;
+    color: yellow;
+    margin-top: 2rem;
+    
+    text-align: center; 
+    
+}
+
+#starwarsheader{
+    align-items: center;
+    align-content: center;
+}
+
 button{
     color: black;
     background-color: yellow;
@@ -48,22 +62,28 @@ main {
 }
 
 div{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top:10px;
-    align-content: center;
-    padding: 8px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 2rem;
+    width: 100%;
+    max-width: 1280;
+    margin: 0 auto;
+    margin-bottom: 6rem;
+  
 }
 
 img{
-     width: 200px
+     width: 200px;
+     border-style: solid;
+     border: 2px yellow;
 }
 
 .personDiv{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
+#divbutton{
+    margin-bottom: 3rem; 
+}
