--- a/styles/pokemon.css
+++ b/styles/pokemon.css
@@ -28,21 +28,30 @@ main {
   align-items: center;
 }
 
-h3{
+h5{
     text-align: center;
+    color: rgb(255, 232, 23);
 }
 
 img{
     width: 120px;
     border-width: 30px;
     border-color: black;
+    background: rgb(237, 245, 134);
+
 }
 
 p{
-  color: black;
+  color: rgb(255, 255, 255);
+  text-align: center;
 }
 
+h2{
+  font-family: futura;
+  color: rgb(255, 232, 23);
+  margin-top: 0px;
 
+}
 
 button{
     width: 150px;
@@ -59,7 +68,10 @@ button{
 #buttonsec{
   display: flex;
   justify-content: center;
-  padding-bottom:20px;
+  padding-bottom:40px;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .scene {
@@ -70,73 +82,56 @@ button{
   }
   
   .card {
-    width: 100%;
     height: 100%;
-    transition: transform 1s;
+    transition: transform 2s;
     transform-style: preserve-3d;
     cursor: pointer;
     position: relative;
-    background-color: blue;
-  
+    /* position: absolute; */  
+    line-height: 6px;
+    text-align: center;
+    font-size: 20px; 
+    /* backface-visibility: hidden; */
+    background: rgb(35, 104, 168);
+    width: 180px;
+    border-style: solid;
+    border-color: rgb(255, 232, 23);
+    border-width: 10px;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   
   .card.is-flipped {
     transform: rotateY(180deg);
   }
   
-  .card__face {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    line-height: 260px;
-    text-align: center;
-    font-weight: bold;
-    font-size: 40px;
-    /* backface-visibility: hidden; */
-    background: rgb(203, 211, 97);
-    width: 180px;
-    border-style: solid;
-    border-color: rgb(255, 232, 23);
-    border-width: 10px;
-    border-radius: 8px;
+
+  
 
     
-  }
   
-  .card__back{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    line-height: 260px;
-    text-align: center;
-    font-weight: bold;
-    font-size: 40px;
-    /* backface-visibility: hidden; */
-    background: rgb(203, 211, 97);
-    width: 180px;
-    border-style: solid;
-    border-color: yellow;
-    border-width: 10px;
-    border-radius: 8px;
+  
 
-  }
 
   #pokemonlogo{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-top: 40px;
-    
-    
+    padding-top: 40px;  
   }
 
   #pokemonlogoimage{
     width: 400px;
+    background: none;
   }
 
   #pokemonpic{
     width: 200px;
     height: 200px;
+    background: none;
   }
 
 
@@ -164,6 +159,7 @@ button{
     /* height: 100%;
     width: 100%; */
     backface-visibility: hidden;
+    transform: rotateY(180deg);
 
   }
   
