--- a/styles/starwars-style.css
+++ b/styles/starwars-style.css
@@ -1,5 +1,5 @@
 *{
-    font-family: futura;
+    font-family: orbitron;
     background: #000;
 }
 
@@ -11,7 +11,7 @@ header{
 }
 
 h1{
-    font-family: marsek;
+    
     color: yellow;
     margin-top: 2rem;
     
@@ -36,14 +36,14 @@ button{
 }
 
 h3{
-    font-family: marsek;
+    
     color: yellow;
     margin-top: 10px;
     margin-bottom: 5px;
 }
 
 p{
-    font-family: marsek;
+    
     color: yellow;
     margin-top: 10px;
     margin-bottom: 5px;
